SERVER-15019 propagate kill and invalidate for agg cursors to the nested PlanExecutor